fix: security hardening + production readiness
Security:
- Replace Java deserialization in OAuth2 cookie with Redis state storage (CWE-502 RCE fix)
- Add IP-based rate limiting on auth endpoints via RateLimitFilter (Redis sliding window)
- OAuth2 cookie now sets Secure flag dynamically based on request.isSecure()
- JWT secret key encoding explicitly uses UTF-8

Bug fixes:
- Add missing User.getId() getter (caused runtime errors in CandidateService/UserController)
- Fix EmailService: use new Properties() instead of System.getProperties() (JVM global state pollution)
- Fix SMTP protocol: switch to STARTTLS port 587 with correct smtp transport
- Fix QuotaService monthly reset logic using YearMonth.equals() to handle year boundaries
- Add @Transactional to CandidateService.save/updateNotes/updateStatus/updateLinkedIn

Config:
- CORS allowed origins now configurable via ALLOWED_ORIGINS env var
- Remove unresolved Maven placeholder spring.profiles.active=@spring.profiles.active@
- Add spring-boot-starter-actuator with health endpoint only

Code quality:
- Replace all System.out.println / e.printStackTrace() with SLF4J loggers (6 files)
- Deprecation fix: new Double(x).longValue() -> (long) x in RedisUtils
- UserRepository: CrudRepository -> JpaRepository for consistency
- KConstantes: add colon separators to EMAILCODE/NEWUSER, make fields final
- RegisterRequest: align password min length to 8 chars (matches ResetPasswordRequest)
- Remove unused BufferedOutputStream import in WebController
- Remove dead Consulta.java entity (legacy project remnant)
- Delete 11 unused Thymeleaf templates (no MVC controller, no thymeleaf dependency)
- SearchService: only consume quota on real API calls, not cache hits

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>